# openfhe-ridge-inference

./: .gitignore  CMakeLists.txt  README.md
scripts/: train_and_export.py
src/: ridge.cpp
